--- a/index.html
+++ b/index.html
@@ -49,11 +49,17 @@
         </section>
 
         <section id="main">
+            <p>This is some text, yoooo.</p>
+            <p>some more text right here for yall</p>
+
             <img src="pics/door.jpg"/><br><br>
             <a href="https://google.com" target="_blank">Go to Google</a><br><br>
 
-            <form>
+            <form action="submit.php">
                 <textarea class="text" placeholder="Skriver noe"></textarea>
+                <br>
+                <input name="email" placeholder="Email"/>
+                <p class="status"></p>
                 <br>
                 <button id="append">Append</button>
                 <button id="prepend">Prepend</button>
