--- a/pipboi/index.html
+++ b/pipboi/index.html
@@ -18,21 +18,21 @@
 
     <nav class="navbar navbar-expand navbar-light">
         <div class="collapse navbar-collapse" id="mainNav">
-            <ul class="navbar-nav mr-auto">
-                <li class="navbar-item active">
-                    <a href="#" class="nav-link">STAT</a>
+            <ul class="navbar-nav nav-fill w-100">
+                <li class="nav-item active">
+                    <a href="#" class="nav-link"><span>STAT</span></a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">INV</a>
+                    <a href="#" class="nav-link"><span>INV</span></a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">DATA</a>
+                    <a href="#" class="nav-link"><span>DATA</span></a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">MAP</a>
+                    <a href="#" class="nav-link"><span>MAP</span></a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">RADIO</a>
+                    <a href="#" class="nav-link"><span>RADIO</span></a>
                 </li>
             </ul>
         </div>
@@ -42,7 +42,8 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <ul class="nav nav-tabs">
+
+                <ul class="nav nav-tabs justify-content-center">
                     <li class="nav-item">
                         <a href="#status" class="nav-link" data-toggle="tab" role="tab">
                             STATUS
@@ -65,7 +66,9 @@
 
                 <div class="tab-content">
                     <div class="tab-pane active" id="status" role="tabpanel">
-                        STATUS
+                        <div class="center-image">
+                            <img src="./images/VaultBoy.png">
+                        </div>
                     </div>
                     <div class="tab-pane" id="special" role="tabpanel">
                         SPECIAL
@@ -75,10 +78,23 @@
                     </div>
                 </div>
             </div>
-
         </div>
-
     </div>
+
+    <nav class="navbar-light pip-footer">
+        <div class="row">
+            <div class="col-3">
+                HP 90/90
+            </div>
+            <div class="col-6">
+                LEVEL 1
+                <div class="level-progress"></div>
+            </div>
+            <div class="col-3">
+                AP 50/50
+            </div>
+        </div>
+    </nav>
 
         
 </body>
